reproducible crash [@ nsMsgDBFolder::AddMarkAllReadUndoAction ]
Categories
(Thunderbird :: General, defect)
Tracking
(thunderbird_esr115 wontfix, thunderbird126 affected, thunderbird127 fixed)
People
(Reporter: mkmelin, Assigned: mkmelin)
References
Details
Crash Data
Attachments
(1 file)
48 bytes,
text/x-phabricator-request
|
wsmwk
:
approval-comm-beta-
wsmwk
:
approval-comm-esr115-
|
Details | Review |
See bp-c129e348-c405-4f3f-bd08-9961e0240417
Set mailnews.mark_message_read.imap true, select an imap folder and quit. Boom.
I see the issue. Not directly caused by bug 1863820 but that bug would make it far much prominent.
Assignee | ||
Comment 1•1 year ago
|
||
nsMsgWindow::GetTransactionManager will just return the current state, and (almost) always NS_OK.
Comment 2•1 year ago
|
||
Crash report: https://crash-stats.mozilla.org/report/index/c129e348-c405-4f3f-bd08-9961e0240417
Reason: SIGSEGV / SEGV_MAPERR
Top 10 frames:
0 libxul.so nsMsgDBFolder::AddMarkAllReadUndoAction(nsIMsgWindow*, unsigned int*, unsigne... mailnews/base/src/nsMsgDBFolder.cpp:1454
1 libxul.so nsImapMailFolder::MarkAllMessagesRead(nsIMsgWindow*) mailnews/imap/src/nsImapMailFolder.cpp:1838
2 libxul.so nsMsgDBView::DoCommand(int) mailnews/base/src/nsMsgDBView.cpp:2458
3 libxul.so NS_InvokeByIndex
4 libxul.so CallMethodHelper::Invoke() js/xpconnect/src/XPCWrappedNative.cpp:1627
4 libxul.so CallMethodHelper::Call() js/xpconnect/src/XPCWrappedNative.cpp:1180
4 libxul.so XPCWrappedNative::CallMethod(XPCCallContext&, XPCWrappedNative::CallMode) js/xpconnect/src/XPCWrappedNative.cpp:1126
5 libxul.so XPC_WN_CallMethod(JSContext*, unsigned int, JS::Value*) js/xpconnect/src/XPCWrappedNativeJSOps.cpp:966
6 libxul.so CallJSNative(JSContext*, bool (*)(JSContext*, unsigned int, JS::Value*), js::... js/src/vm/Interpreter.cpp:486
6 libxul.so js::InternalCallOrConstruct(JSContext*, JS::CallArgs const&, js::MaybeConstru... js/src/vm/Interpreter.cpp:580
Assignee | ||
Updated•1 year ago
|
Comment 3•1 year ago
|
||
Pushed to comm-central:
https://hg.mozilla.org/comm-central/rev/9009daf0b2adfcc66692e90c87bd91bb45ec9678
Updated•1 year ago
|
Assignee | ||
Comment 4•1 year ago
|
||
Comment on attachment 9397099 [details]
Bug 1891937 - Fix crash in [@ nsMsgDBFolder::AddMarkAllReadUndoAction ]. r=#thunderbird-reviewers
[Approval Request Comment]
Regression caused by (bug #): strictly not a regression, just more exposed (?)
User impact if declined: crash
Testing completed (on c-c, etc.): c-c
Risk to taking this patch (and alternatives if risky): safe
Comment 5•1 year ago
|
||
Comment on attachment 9397099 [details]
Bug 1891937 - Fix crash in [@ nsMsgDBFolder::AddMarkAllReadUndoAction ]. r=#thunderbird-reviewers
[Triage Comment]
We will let this ride the train to 128
Updated•1 year ago
|
Description
•