Bug 1891937 - Fix crash in [@ nsMsgDBFolder::AddMarkAllReadUndoAction ]. r=leftmostcat

nsMsgWindow::GetTransactionManager will just return the current state, and (almost) always NS_OK.

Differential Revision: https://phabricator.services.mozilla.com/D207698

--HG--
extra : amend_source : 71155806e2ac9b8f03a314cc105b03de8f6129cc